# heal-plz

./: .env.example  .gitignore  .healplz.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  init-project.ps1  init-project.sh  pyproject.toml
.claude/: settings.example.json  settings.json
.claude/commands/: agent-plan.md  brainstorm.md  cfo.md  commit.md  council-config.md  council.md  debug.md  health.md  parse-pdf.md  plan.md  refactor.md  review.md  test.md
.claude/skills/cfo/: EXAMPLES.md  HOOKS_SETUP.md  README.md  skill.md
.github/: FUNDING.yml
.github/workflows/: claude-code-review.yaml.example
docs/: AGENTIC_GUIDE.md  AGENT_SDK_QUICKSTART.md  BEST_PRACTICES.md  GETTING_STARTED.md  LLM_COUNCIL_GUIDE.md  SKILLS_GUIDE.md  UI_DESIGN_GUIDE.md
docs/architecture/: .gitkeep
docs/decisions/: .gitkeep
docs/references/: .gitkeep
examples/: README.md  hello.py
examples/agentic-claude-md/: CLAUDE.md
examples/node-express/: CLAUDE.md
examples/python-fastapi/: CLAUDE.md
examples/typescript-react/: CLAUDE.md
scripts/agent-examples/: README.md  requirements.txt
scripts/agent-examples/autonomous-task/: config.example.yaml  main.py  (+2 more)
scripts/llm-council/: README.md  config.yaml  council.py  requirements.txt
scripts/pdf-parser/: __init__.py  analyzer.py  config.example.yaml  extractor.py  llm.py  organizer.py  parse_pdf.py  requirements.txt
src/heal_plz/: config.py  main.py
tests/: README.md  conftest.py  example.test.js  example.test.ts  example_test.py
tests/integration/: test_api_alerts.py  test_api_incidents.py  test_api_webhooks.py
(+90 files in other folders)
